// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`assertDomainObjectIsSafeToManipulate should throw a helpful error if any of the properties are a nested object not explicitly defined 1`] = `
"
DomainObject 'Plant' is not safe to manipulate.

Specifically, the keys: [\\"pot\\"].

Please make sure all nested objects are DomainObjects and are explicitly defined on the class definition, using the 'nested' static property.

For example:
\`\`\`ts
  class Plant ... {
    public static nested = { pot: ... };
  }
\`\`\`
    "
`;

exports[`assertDomainObjectIsSafeToManipulate should throw a helpful error if any of the properties are an array with nested objects not explicitly defined 1`] = `
"
DomainObject 'Plant' is not safe to manipulate.

Specifically, the keys: [\\"pastPots\\"].

Please make sure all nested objects are DomainObjects and are explicitly defined on the class definition, using the 'nested' static property.

For example:
\`\`\`ts
  class Plant ... {
    public static nested = { pastPots: ... };
  }
\`\`\`
    "
`;
